appId: com.handysuites.app
name: "Final Design Audit"
---
- tapOn: "Vender"
- tapOn: "Cobrar"
- tapOn: "Equipo"
- tapOn: "Más"
- tapOn:
    text: "Clientes"
- back
- tapOn:
    text: "Mi Perfil"
- back
- tapOn:
    text: "Impresora"
- back
- tapOn:
    text: "Notificaciones"
- back
- tapOn:
    text: "Ayuda"
- back
- tapOn:
    text: "Acerca de"
- back
- tapOn: "Hoy"
